# deeplearning.scratchpad

./: .editorconfig  .gitignore  README.md  chatapp.py  debug.py  debug_cmp.py  debug_lm_head.py  debug_qwen.py  env.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: test-gpu.yml  test.yml
misc/: weight_sharing_gpt.ipynb
models/: alexnet.py  alexnet_two_tower.py  gpt-2.py  gpt2.py  helpers.py  llama.py  llama2.py  mistral_batched.py  mistral_nonrolling.py  mistral_rolling.py  mixtral.py  resnet.py  unet.py
models/flux/: cli.py  load.py  math_utils.py  model.py  sampling.py  util.py
models/gpt2/: attention.py  config.py  generate.py  load.py  main.py  tokenizer.py  transformer.py
models/llama/: README.md  attention.py  config.py  generate.py  load.py  main.py  rope.py  tokenizer.py  transformer.py
models/llama2/: README.md  attention.py  config.py  generate.py  load.py  main.py  tokenizer.py  transformer.py
models/llama3/: README.md  attention.py  config.py  generate.py  load.py  main.py  rope.py  rope_sliced.py  tokenizer.py  transformer.py
models/mistral_nonrolling/: attention.py  config.py  generate.py  load.py  main.py  rope.py  tokenizer.py  transformer.py
models/mistral_rolling/: attention.py  config.py  generate.py  load.py  (+2 more)
scratchpad/: benchmark.ipynb  compare_llama_greedy.ipynb  dis.ipynb  huggingface_usage.ipynb  huggingface_usage_llama.ipynb  mydis.ipynb
scripts/: runpod_test.py
tests/: test_alexnet.py  test_gpt2.py  test_llama.py  test_llama2.py  test_llama3.py  test_qwen2.py  test_qwq.py  test_resnet.py
(+22 files in other folders)
